Fix gap in region color/image fade in CardInfo.

--- a/client/src/components/draft/CardInfo.module.css
+++ b/client/src/components/draft/CardInfo.module.css
@@ -8,7 +8,7 @@
 .Demacia {
   background-image: linear-gradient(
     90deg,
-    rgb(231, 217, 184) 30%,
+    rgb(231, 217, 184) 32.4%,
     rgba(231, 217, 184, 0) 70%
   );
 }
@@ -16,7 +16,7 @@
 .Shurima {
   background-image: linear-gradient(
     90deg,
-    rgb(238, 205, 50) 30%,
+    rgb(238, 205, 50) 32.4%,
     rgba(238, 205, 50, 0) 70%
   );
 }
@@ -24,7 +24,7 @@
 .PiltoverZaun {
   background-image: linear-gradient(
     90deg,
-    rgb(222, 199, 69) 30%,
+    rgb(222, 199, 69) 32.4%,
     rgba(222, 199, 69, 0) 70%
   );
 }
@@ -32,7 +32,7 @@
 .Bilgewater {
   background-image: linear-gradient(
     90deg,
-    rgb(209, 109, 73) 30%,
+    rgb(209, 109, 73) 32.4%,
     rgba(209, 109, 73, 0) 70%
   );
 }
@@ -40,7 +40,7 @@
 .Noxus {
   background-image: linear-gradient(
     90deg,
-    rgb(200, 77, 74) 30%,
+    rgb(200, 77, 74) 32.4%,
     rgba(200, 77, 74, 0) 70%
   );
 }
@@ -48,7 +48,7 @@
 .Ionia {
   background-image: linear-gradient(
     90deg,
-    rgb(207, 130, 155) 30%,
+    rgb(207, 130, 155) 32.4%,
     rgba(207, 130, 155, 0) 70%
   );
 }
@@ -56,7 +56,7 @@
 .BandleCity {
   background-image: linear-gradient(
     90deg,
-    rgb(193, 207, 17) 30%,
+    rgb(193, 207, 17) 32.4%,
     rgba(193, 207, 17, 0) 70%
   );
 }
@@ -64,7 +64,7 @@
 .ShadowIsles {
   background-image: linear-gradient(
     90deg,
-    rgb(12, 161, 132) 30%,
+    rgb(12, 161, 132) 32.4%,
     rgba(12, 161, 132, 0) 70%
   );
 }
@@ -72,7 +72,7 @@
 .Targon {
   background-image: linear-gradient(
     90deg,
-    rgb(91, 55, 229) 30%,
+    rgb(91, 55, 229) 32.4%,
     rgba(91, 55, 229, 0) 70%
   );
 }
@@ -80,7 +80,7 @@
 .Freljord {
   background-image: linear-gradient(
     90deg,
-    rgb(147, 223, 250) 30%,
+    rgb(147, 223, 250) 32.4%,
     rgba(147, 223, 250, 0) 70%
   );
 }
@@ -88,7 +88,7 @@
 .Runeterra {
   background-image: linear-gradient(
     90deg,
-    rgb(171, 148, 89) 30%,
+    rgb(171, 148, 89) 32.4%,
     rgba(171, 148, 89, 0) 70%
   );
 }
